--- a/J-Runner/JRunner.csproj
+++ b/J-Runner/JRunner.csproj
@@ -186,6 +186,12 @@
     <Compile Include="Forms\About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CPUKeyGen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CPUKeyGen.designer.cs">
+      <DependentUpon>CPUKeyGen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\OpenXenium.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -573,6 +579,9 @@
     <EmbeddedResource Include="Forms\About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CPUKeyGen.resx">
+      <DependentUpon>CPUKeyGen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OpenXenium.resx">
       <DependentUpon>OpenXenium.cs</DependentUpon>
